--- a/problems/std-collections/comm/Cargo.toml
+++ b/problems/std-collections/comm/Cargo.toml
@@ -8,3 +8,6 @@ edition = "2021"
 pretty_assertions = ">= 1.1.0"
 rand = ">= 0.8.4"
 tempfile = ">= 3.3.0"
+
+[dependencies]
+clap = { version = "4.5.34", features = ["derive"] }
