--- a/problems/std-collections/prefix/Cargo.toml
+++ b/problems/std-collections/prefix/Cargo.toml
@@ -5,5 +5,5 @@ authors = ["Alexander Stanovoy <alex.stanovoy@gmail.com>"]
 edition = "2021"
 
 [dependencies]
-rand = ">= 0.8.4"
+rand = "0.8.*"
 ntest = ">= 0.7.3"
